fix: overflow issues with calendar items

--- a/src/app/calendar/calendar/calendar-item/calendar-item.component.scss
+++ b/src/app/calendar/calendar/calendar-item/calendar-item.component.scss
@@ -3,5 +3,11 @@
 
   & > .tui-island__category {
     padding: 0.75rem;
+
+    & > * {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 }
